attached muzzle and hit impact effects in editor.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,7 +105,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.16-13.50.31
+CoopGame.TimeStamp=2020.04.16-14.39.44
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -767,6 +767,8 @@ Cascade.TimeStamp=2019.12.20-23.26.30
 Cascade.LastCompileMethod=Unknown
 DistCurveEditor.TimeStamp=2019.12.20-23.26.34
 DistCurveEditor.LastCompileMethod=Unknown
+TextureEditor.TimeStamp=2019.12.20-23.27.01
+TextureEditor.LastCompileMethod=Unknown
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -1547,6 +1549,62 @@ ParticleSystem.Performance=True
 ParticleSystem.MacroUV=True
 ParticleSystem.Occlusion=True
 ParticleSystem.Materials=True
+BP_Rifle_C.Weapon=True
+REINST_BP_Rifle_C_32.Tick=True
+REINST_BP_Rifle_C_32.Weapon=True
+REINST_BP_Rifle_C_32.Rendering=True
+REINST_BP_Rifle_C_32.Replication=True
+REINST_BP_Rifle_C_32.Input=True
+REINST_BP_Rifle_C_32.Actor=True
+EditorKeyboardShortcutSettings.SkeletalMeshEditor=True
+ParticleModuleColorOverLife.Color=True
+ParticleModuleColorOverLife.Cascade=True
+Emitter.TransformCommon=True
+Emitter.Particles=True
+Emitter.EmitterActions=True
+Emitter.Materials=True
+Emitter.Attachment=True
+Emitter.Lighting=True
+Emitter.Rendering=True
+Emitter.LOD=True
+Emitter.Tags=True
+Emitter.Activation=True
+Emitter.Cooking=True
+Emitter.Emitter=True
+Emitter.Replication=True
+Emitter.Actor=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+MaterialExpressionMultiply.MaterialExpressionMultiply=True
+MaterialExpressionMultiply.MaterialExpression=True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
+MaterialExpressionParticleColor.MaterialExpression=True
+MaterialExpressionTextureCoordinate.MaterialExpressionTextureCoordinate=True
+MaterialExpressionTextureCoordinate.MaterialExpression=True
+MaterialExpressionPanner.MaterialExpressionPanner=True
+MaterialExpressionPanner.MaterialExpression=True
+Texture2D.Compression=True
+Texture2D.LevelOfDetail=True
+Texture2D.Texture=True
+Texture2D.File Path=True
+Texture2D.Adjustments=True
+Texture2D.Compositing=True
+MaterialExpressionTextureObject.MaterialExpressionTextureBase=True
+MaterialExpressionTextureObject.MaterialExpression=True
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1723,22 +1781,30 @@ MeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInsta
 PrimitiveComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 SceneComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 ActorComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+ParticleModuleColorOverLife="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
+ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
+ParticleModule="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 RecentlyPlaced=/Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Weapons/Effects/Muzzle/P_Muzzle_Large
-MRUItem1=/Game/Blueprints/BP_PlayerPawn
-MRUItem2=/Game/Blueprints/BP_TargetDummy
-MRUItem3=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
+MRUItem0=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail
+MRUItem1=/Game/Weapons/Effects/BasicTracer/M_Beam
+MRUItem2=/Game/Weapons/Effects/BasicTracer/Beam
+MRUItem3=/Game/Weapons/SK_Rifle_Skeleton
 MRUItem4=/Game/Blueprints/BP_Rifle
 MRUItem5=/Game/Weapons/SK_Rifle
-MRUItem6=/Game/Blueprints/BP_Weapon
-MRUItem7=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
-MRUItem8=/Game/Blueprints/Animations/BP_CharacterAnimation
-MRUItem9=/Game/maps/VoidMap
+MRUItem6=/Game/Weapons/Effects/Muzzle/P_Muzzle_Large
+MRUItem7=/Game/Blueprints/BP_PlayerPawn
+MRUItem8=/Game/Blueprints/BP_TargetDummy
+MRUItem9=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
+MRUItem10=/Game/Blueprints/BP_Weapon
+MRUItem11=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
+MRUItem12=/Game/Blueprints/Animations/BP_CharacterAnimation
+MRUItem13=/Game/maps/VoidMap
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=1
@@ -1748,6 +1814,10 @@ MRUItem9=/Game/maps/VoidMap
 /Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton.UE4_Mannequin_Skeleton=0
 /Game/Weapons/SK_Rifle.SK_Rifle=0
 /Game/Weapons/Effects/Muzzle/P_Muzzle_Large.P_Muzzle_Large=0
+/Game/Weapons/SK_Rifle_Skeleton.SK_Rifle_Skeleton=0
+/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail=0
+/Game/Weapons/Effects/BasicTracer/M_Beam.M_Beam=0
+/Game/Weapons/Effects/BasicTracer/Beam.Beam=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -1819,5 +1889,51 @@ FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 
 [CascadeEditor]
 LightDir=P=-44.999969 Y=-179.999969 R=0.000000
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bUseUnsortedMenus=False
+
+[SuppressableDialogs]
+Warning_CompileErrorsInMaterial=False
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
 
 
