--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1607,7 +1607,7 @@ MaterialExpressionTextureObject.MaterialExpressionTextureBase=True
 MaterialExpressionTextureObject.MaterialExpression=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
@@ -1640,7 +1640,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Weapons
+ContentBrowserTab1.SelectedPaths=/Game/weaponEffects/Muzzle
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -1760,7 +1760,7 @@ SkeletalMeshComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMes
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[1]\" "
-Object=
+Object="\"Object.Materials.NamedMaterialSlots\" "
 BP_PlayerPawn_C=
 SCharacter=
 Character=
@@ -1784,6 +1784,7 @@ ActorComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInst
 ParticleModuleColorOverLife="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleModule="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
+ParticleSystem="\"Object.Materials.NamedMaterialSlots\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
@@ -1791,20 +1792,24 @@ RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 RecentlyPlaced=/Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail
-MRUItem1=/Game/Weapons/Effects/BasicTracer/M_Beam
-MRUItem2=/Game/Weapons/Effects/BasicTracer/Beam
-MRUItem3=/Game/Weapons/SK_Rifle_Skeleton
+MRUItem0=/Game/weaponEffects/Muzzle/P_Muzzle_Large
+MRUItem1=/Game/weaponEffects/BloodImpact/P_blood_splash_02
+MRUItem2=/Game/Weapons/Effects/BloodImpact/P_blood_splash_02
+MRUItem3=/Game/Weapons/Effects/BloodImpact/T_BloodSplat_03_SubUV
 MRUItem4=/Game/Blueprints/BP_Rifle
-MRUItem5=/Game/Weapons/SK_Rifle
-MRUItem6=/Game/Weapons/Effects/Muzzle/P_Muzzle_Large
-MRUItem7=/Game/Blueprints/BP_PlayerPawn
-MRUItem8=/Game/Blueprints/BP_TargetDummy
-MRUItem9=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
-MRUItem10=/Game/Blueprints/BP_Weapon
-MRUItem11=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
-MRUItem12=/Game/Blueprints/Animations/BP_CharacterAnimation
-MRUItem13=/Game/maps/VoidMap
+MRUItem5=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail
+MRUItem6=/Game/Weapons/Effects/BasicTracer/M_Beam
+MRUItem7=/Game/Weapons/Effects/BasicTracer/Beam
+MRUItem8=/Game/Weapons/SK_Rifle_Skeleton
+MRUItem9=/Game/Weapons/SK_Rifle
+MRUItem10=/Game/Weapons/Effects/Muzzle/P_Muzzle_Large
+MRUItem11=/Game/Blueprints/BP_PlayerPawn
+MRUItem12=/Game/Blueprints/BP_TargetDummy
+MRUItem13=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
+MRUItem14=/Game/Blueprints/BP_Weapon
+MRUItem15=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
+MRUItem16=/Game/Blueprints/Animations/BP_CharacterAnimation
+MRUItem17=/Game/maps/VoidMap
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=1
@@ -1818,6 +1823,10 @@ MRUItem13=/Game/maps/VoidMap
 /Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail=0
 /Game/Weapons/Effects/BasicTracer/M_Beam.M_Beam=0
 /Game/Weapons/Effects/BasicTracer/Beam.Beam=0
+/Game/Weapons/Effects/BloodImpact/P_blood_splash_02.P_blood_splash_02=0
+/Game/Weapons/Effects/BloodImpact/T_BloodSplat_03_SubUV.T_BloodSplat_03_SubUV=0
+/Game/weaponEffects/BloodImpact/P_blood_splash_02.P_blood_splash_02=0
+/Game/weaponEffects/Muzzle/P_Muzzle_Large.P_Muzzle_Large=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
