corrected tracer target name.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,7 +105,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.16-15.26.00
+CoopGame.TimeStamp=2020.04.16-15.36.43
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -1605,6 +1605,13 @@ Texture2D.Adjustments=True
 Texture2D.Compositing=True
 MaterialExpressionTextureObject.MaterialExpressionTextureBase=True
 MaterialExpressionTextureObject.MaterialExpression=True
+BP_Rifle_C.SkeletalMesh=True
+REINST_BP_Rifle_C_38.Tick=True
+REINST_BP_Rifle_C_38.Weapon=True
+REINST_BP_Rifle_C_38.Rendering=True
+REINST_BP_Rifle_C_38.Replication=True
+REINST_BP_Rifle_C_38.Input=True
+REINST_BP_Rifle_C_38.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1640,7 +1647,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/weaponEffects/Muzzle
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -1792,11 +1799,11 @@ RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 RecentlyPlaced=/Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/weaponEffects/Muzzle/P_Muzzle_Large
-MRUItem1=/Game/weaponEffects/BloodImpact/P_blood_splash_02
-MRUItem2=/Game/Weapons/Effects/BloodImpact/P_blood_splash_02
-MRUItem3=/Game/Weapons/Effects/BloodImpact/T_BloodSplat_03_SubUV
-MRUItem4=/Game/Blueprints/BP_Rifle
+MRUItem0=/Game/Blueprints/BP_Rifle
+MRUItem1=/Game/weaponEffects/Muzzle/P_Muzzle_Large
+MRUItem2=/Game/weaponEffects/BloodImpact/P_blood_splash_02
+MRUItem3=/Game/Weapons/Effects/BloodImpact/P_blood_splash_02
+MRUItem4=/Game/Weapons/Effects/BloodImpact/T_BloodSplat_03_SubUV
 MRUItem5=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail
 MRUItem6=/Game/Weapons/Effects/BasicTracer/M_Beam
 MRUItem7=/Game/Weapons/Effects/BasicTracer/Beam
