fire made wirtual so it can be overridden.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,7 +105,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.16-15.36.43
+CoopGame.TimeStamp=2020.04.16-15.43.02
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -769,6 +769,8 @@ DistCurveEditor.TimeStamp=2019.12.20-23.26.34
 DistCurveEditor.LastCompileMethod=Unknown
 TextureEditor.TimeStamp=2019.12.20-23.27.01
 TextureEditor.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2019.12.20-23.26.57
+SequencerWidgets.LastCompileMethod=Unknown
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -1612,6 +1614,43 @@ REINST_BP_Rifle_C_38.Rendering=True
 REINST_BP_Rifle_C_38.Replication=True
 REINST_BP_Rifle_C_38.Input=True
 REINST_BP_Rifle_C_38.Actor=True
+CanvasPanel.Behavior=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
+Image.Layout=True
+Image.Appearance=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Clipping=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
+REINST_BP_PlayerPawn_C_57.Variable=True
+REINST_BP_PlayerPawn_C_57.TransformCommon=True
+REINST_BP_PlayerPawn_C_57.Sockets=True
+REINST_BP_PlayerPawn_C_57.CameraSettings=True
+REINST_BP_PlayerPawn_C_57.CameraOptions=True
+REINST_BP_PlayerPawn_C_57.PostProcess=True
+REINST_BP_PlayerPawn_C_57.Tags=True
+REINST_BP_PlayerPawn_C_57.ComponentReplication=True
+REINST_BP_PlayerPawn_C_57.Activation=True
+REINST_BP_PlayerPawn_C_57.Cooking=True
+REINST_BP_PlayerPawn_C_57.Events=True
+REINST_BP_PlayerPawn_C_61.Variable=True
+REINST_BP_PlayerPawn_C_61.TransformCommon=True
+REINST_BP_PlayerPawn_C_61.Sockets=True
+REINST_BP_PlayerPawn_C_61.CameraSettings=True
+REINST_BP_PlayerPawn_C_61.CameraOptions=True
+REINST_BP_PlayerPawn_C_61.PostProcess=True
+REINST_BP_PlayerPawn_C_61.Tags=True
+REINST_BP_PlayerPawn_C_61.ComponentReplication=True
+REINST_BP_PlayerPawn_C_61.Activation=True
+REINST_BP_PlayerPawn_C_61.Cooking=True
+REINST_BP_PlayerPawn_C_61.Events=True
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1764,10 +1803,11 @@ WmfMediaSettings=InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindin
 BP_PlayerPawn_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,
 K2Node_VariableGet=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,
 SkeletalMeshComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,
+K2Node_VariableSet=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[1]\" "
-Object="\"Object.Materials.NamedMaterialSlots\" "
+Object=
 BP_PlayerPawn_C=
 SCharacter=
 Character=
@@ -1792,6 +1832,9 @@ ParticleModuleColorOverLife="\"Object.Color.ColorOverLife.Distribution\" \"Objec
 ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleModule="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleSystem="\"Object.Materials.NamedMaterialSlots\" "
+Image=
+Widget=
+Visual=
 
 [PlacementMode]
 RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
@@ -1799,24 +1842,25 @@ RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 RecentlyPlaced=/Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_Rifle
-MRUItem1=/Game/weaponEffects/Muzzle/P_Muzzle_Large
-MRUItem2=/Game/weaponEffects/BloodImpact/P_blood_splash_02
-MRUItem3=/Game/Weapons/Effects/BloodImpact/P_blood_splash_02
-MRUItem4=/Game/Weapons/Effects/BloodImpact/T_BloodSplat_03_SubUV
-MRUItem5=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail
-MRUItem6=/Game/Weapons/Effects/BasicTracer/M_Beam
-MRUItem7=/Game/Weapons/Effects/BasicTracer/Beam
-MRUItem8=/Game/Weapons/SK_Rifle_Skeleton
-MRUItem9=/Game/Weapons/SK_Rifle
-MRUItem10=/Game/Weapons/Effects/Muzzle/P_Muzzle_Large
-MRUItem11=/Game/Blueprints/BP_PlayerPawn
-MRUItem12=/Game/Blueprints/BP_TargetDummy
-MRUItem13=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
-MRUItem14=/Game/Blueprints/BP_Weapon
-MRUItem15=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
-MRUItem16=/Game/Blueprints/Animations/BP_CharacterAnimation
-MRUItem17=/Game/maps/VoidMap
+MRUItem0=/Game/Blueprints/BP_PlayerPawn
+MRUItem1=/Game/UI/WBP_SimpleCrosshair
+MRUItem2=/Game/Blueprints/BP_Rifle
+MRUItem3=/Game/weaponEffects/Muzzle/P_Muzzle_Large
+MRUItem4=/Game/weaponEffects/BloodImpact/P_blood_splash_02
+MRUItem5=/Game/Weapons/Effects/BloodImpact/P_blood_splash_02
+MRUItem6=/Game/Weapons/Effects/BloodImpact/T_BloodSplat_03_SubUV
+MRUItem7=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail
+MRUItem8=/Game/Weapons/Effects/BasicTracer/M_Beam
+MRUItem9=/Game/Weapons/Effects/BasicTracer/Beam
+MRUItem10=/Game/Weapons/SK_Rifle_Skeleton
+MRUItem11=/Game/Weapons/SK_Rifle
+MRUItem12=/Game/Weapons/Effects/Muzzle/P_Muzzle_Large
+MRUItem13=/Game/Blueprints/BP_TargetDummy
+MRUItem14=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
+MRUItem15=/Game/Blueprints/BP_Weapon
+MRUItem16=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
+MRUItem17=/Game/Blueprints/Animations/BP_CharacterAnimation
+MRUItem18=/Game/maps/VoidMap
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=1
@@ -1951,5 +1995,70 @@ bPlatformUsed[31]=0
 bMaterialQualityUsed[0]=0
 bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
+
+[WidgetTemplatesExpanded]
+Common=False
+Input=False
+Lists=False
+Misc=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Uncategorized=False
+User Created=False
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1.000000
+bCanPreviewSwapAspectRatio=False
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+bKeyInterpPropertiesOnly=False
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=True
+bLabelBrowserVisible=False
+bShowSelectedNodesOnly=False
+bRewindOnRecord=True
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+LoopMode=SLM_NoLoop
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepCursorInPlayRange=True
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+bShowCombinedKeyframes=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=False
+TrajectoryPathCap=250
+FrameNumberDisplayFormat=Seconds
+CurveVisibility=SelectedCurves
 
 
