grenade launcher created.

--- a/CoopGame/Config/DefaultEditorPerProjectUserSettings.ini
+++ b/CoopGame/Config/DefaultEditorPerProjectUserSettings.ini
@@ -66,4 +66,17 @@ bPromoteOutputLogWarningsDuringPIE=False
 AssetEditorOpenLocation=MainWindow
 bEnableColorizedEditorTabs=True
 
+[/Script/UnrealEd.LevelEditorMiscSettings]
+bAutoApplyLightingEnable=True
+bBSPAutoUpdate=True
+bAutoMoveBSPPivotOffset=False
+bNavigationAutoUpdate=True
+bReplaceRespectsScale=True
+bAllowBackgroundAudio=True
+bEnableRealTimeAudio=False
+EditorVolumeLevel=1.000000
+bEnableEditorSounds=False
+DefaultLevelStreamingClass=None
+EditorScreenshotSaveDirectory=(Path="../../../../../../unreal projects/TomLooman/UE4_MasteryCourse_CoopGame/CoopGame/Saved/Screenshots/Windows/")
+
 
