Initial grenade launcher functional.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,8 +105,8 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.16-18.32.46
-CoopGame.LastCompileMethod=Runtime
+CoopGame.TimeStamp=2020.04.17-03.30.09
+CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2019.12.20-23.26.56
@@ -771,6 +771,8 @@ TextureEditor.TimeStamp=2019.12.20-23.27.01
 TextureEditor.LastCompileMethod=Unknown
 SequencerWidgets.TimeStamp=2019.12.20-23.26.57
 SequencerWidgets.LastCompileMethod=Unknown
+MeshBoneReduction.TimeStamp=2019.12.20-23.26.47
+MeshBoneReduction.LastCompileMethod=Unknown
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -1651,6 +1653,127 @@ REINST_BP_PlayerPawn_C_61.ComponentReplication=True
 REINST_BP_PlayerPawn_C_61.Activation=True
 REINST_BP_PlayerPawn_C_61.Cooking=True
 REINST_BP_PlayerPawn_C_61.Events=True
+BP_GrenadeLauncher_C.Tick=True
+BP_GrenadeLauncher_C.Projectile=True
+BP_GrenadeLauncher_C.Weapon=True
+BP_GrenadeLauncher_C.Rendering=True
+BP_GrenadeLauncher_C.Replication=True
+BP_GrenadeLauncher_C.Input=True
+BP_GrenadeLauncher_C.Actor=True
+BP_GrenadeLauncher_C.Variable=True
+BP_GrenadeLauncher_C.TransformCommon=True
+BP_GrenadeLauncher_C.Sockets=True
+BP_GrenadeLauncher_C.Animation=True
+BP_GrenadeLauncher_C.Mesh=True
+BP_GrenadeLauncher_C.Clothing=True
+BP_GrenadeLauncher_C.MasterPoseComponent=True
+BP_GrenadeLauncher_C.Physics=True
+BP_GrenadeLauncher_C.Collision=True
+BP_GrenadeLauncher_C.ClothingSimulation=True
+BP_GrenadeLauncher_C.Lighting=True
+BP_GrenadeLauncher_C.Tags=True
+BP_GrenadeLauncher_C.ComponentReplication=True
+BP_GrenadeLauncher_C.Activation=True
+BP_GrenadeLauncher_C.Cooking=True
+BP_GrenadeLauncher_C.Events=True
+BP_GrenadeLauncher_C.Materials=True
+REINST_BP_GrenadeLauncher_C_32.Tick=True
+REINST_BP_GrenadeLauncher_C_32.Projectile=True
+REINST_BP_GrenadeLauncher_C_32.Weapon=True
+REINST_BP_GrenadeLauncher_C_32.Rendering=True
+REINST_BP_GrenadeLauncher_C_32.Replication=True
+REINST_BP_GrenadeLauncher_C_32.Input=True
+REINST_BP_GrenadeLauncher_C_32.Actor=True
+REINST_BP_PlayerPawn_C_31.Tick=True
+REINST_BP_PlayerPawn_C_31.Character=True
+REINST_BP_PlayerPawn_C_31.Camera=True
+REINST_BP_PlayerPawn_C_31.Pawn=True
+REINST_BP_PlayerPawn_C_31.Rendering=True
+REINST_BP_PlayerPawn_C_31.Replication=True
+REINST_BP_PlayerPawn_C_31.Input=True
+REINST_BP_PlayerPawn_C_31.Actor=True
+BP_Projectile_C.Tick=True
+BP_Projectile_C.Projectile=True
+BP_Projectile_C.Weapon=True
+BP_Projectile_C.Rendering=True
+BP_Projectile_C.Replication=True
+BP_Projectile_C.Input=True
+BP_Projectile_C.Actor=True
+BP_Projectile_C.Variable=True
+BP_Projectile_C.TransformCommon=True
+BP_Projectile_C.Sockets=True
+BP_Projectile_C.Shape=True
+BP_Projectile_C.Navigation=True
+BP_Projectile_C.Physics=True
+BP_Projectile_C.Collision=True
+BP_Projectile_C.Tags=True
+BP_Projectile_C.ComponentReplication=True
+BP_Projectile_C.Cooking=True
+BP_Projectile_C.Events=True
+BP_Projectile_C.ProjectileBounces=True
+BP_Projectile_C.ProjectileSimulation=True
+BP_Projectile_C.Homing=True
+BP_Projectile_C.ProjectileInterpolation=True
+BP_Projectile_C.Velocity=True
+BP_Projectile_C.PlanarMovement=True
+BP_Projectile_C.MovementComponent=True
+BP_Projectile_C.Activation=True
+REINST_BP_Projectile_C_46.Tick=True
+REINST_BP_Projectile_C_46.Projectile=True
+REINST_BP_Projectile_C_46.Weapon=True
+REINST_BP_Projectile_C_46.Rendering=True
+REINST_BP_Projectile_C_46.Replication=True
+REINST_BP_Projectile_C_46.Input=True
+REINST_BP_Projectile_C_46.Actor=True
+BP_Projectile_C.ComponentTick=True
+BP_GrenadeLauncher_C.ComponentTick=True
+REINST_BP_Projectile_C_31.Variable=True
+REINST_BP_Projectile_C_31.Sockets=True
+REINST_BP_Projectile_C_31.Projectile=True
+REINST_BP_Projectile_C_31.ProjectileBounces=True
+REINST_BP_Projectile_C_31.ProjectileSimulation=True
+REINST_BP_Projectile_C_31.Homing=True
+REINST_BP_Projectile_C_31.ProjectileInterpolation=True
+REINST_BP_Projectile_C_31.Velocity=True
+REINST_BP_Projectile_C_31.PlanarMovement=True
+REINST_BP_Projectile_C_31.MovementComponent=True
+REINST_BP_Projectile_C_31.Tags=True
+REINST_BP_Projectile_C_31.ComponentReplication=True
+REINST_BP_Projectile_C_31.Activation=True
+REINST_BP_Projectile_C_31.Cooking=True
+REINST_BP_Projectile_C_31.Events=True
+BP_Projectile_C.StaticMesh=True
+BP_Projectile_C.Lighting=True
+BP_Projectile_C.Materials=True
+REINST_BP_Projectile_C_31.TransformCommon=True
+REINST_BP_Projectile_C_31.StaticMesh=True
+REINST_BP_Projectile_C_31.Materials=True
+REINST_BP_Projectile_C_31.Physics=True
+REINST_BP_Projectile_C_31.Collision=True
+REINST_BP_Projectile_C_31.Lighting=True
+REINST_BP_Projectile_C_31.Rendering=True
+REINST_BP_Projectile_C_35.Variable=True
+REINST_BP_Projectile_C_35.TransformCommon=True
+REINST_BP_Projectile_C_35.Sockets=True
+REINST_BP_Projectile_C_35.StaticMesh=True
+REINST_BP_Projectile_C_35.Materials=True
+REINST_BP_Projectile_C_35.Physics=True
+REINST_BP_Projectile_C_35.Collision=True
+REINST_BP_Projectile_C_35.Lighting=True
+REINST_BP_Projectile_C_35.Rendering=True
+REINST_BP_Projectile_C_35.Tags=True
+REINST_BP_Projectile_C_35.ComponentReplication=True
+REINST_BP_Projectile_C_35.Cooking=True
+REINST_BP_Projectile_C_35.Events=True
+REINST_BP_GrenadeLauncher_C_33.Tick=True
+REINST_BP_GrenadeLauncher_C_33.Projectile=True
+REINST_BP_GrenadeLauncher_C_33.Weapon=True
+REINST_BP_GrenadeLauncher_C_33.Rendering=True
+REINST_BP_GrenadeLauncher_C_33.Replication=True
+REINST_BP_GrenadeLauncher_C_33.Input=True
+REINST_BP_GrenadeLauncher_C_33.Actor=True
+BP_GrenadeLauncher_C.SkeletalMesh=True
+BP_TargetDummy_C.Collision=True
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1686,7 +1809,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Classes_Game/CoopGame/Public
+ContentBrowserTab1.SelectedPaths=/Game/weaponEffects
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -1804,10 +1927,11 @@ BP_PlayerPawn_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Renderi
 K2Node_VariableGet=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,
 SkeletalMeshComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,
 K2Node_VariableSet=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,
+ObjectProperty=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[1]\" "
-Object=
+Object="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 BP_PlayerPawn_C=
 SCharacter=
 Character=
@@ -1835,36 +1959,40 @@ ParticleSystem="\"Object.Materials.NamedMaterialSlots\" "
 Image=
 Widget=
 Visual=
+StaticMeshActor=
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/BP_Projectile.BP_Projectile;
+RecentlyPlaced=/Game/Blueprints/BP_GrenadeLauncher.BP_GrenadeLauncher;
 RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 RecentlyPlaced=/Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_PlayerPawn
-MRUItem1=/Game/UI/WBP_SimpleCrosshair
-MRUItem2=/Game/Blueprints/BP_Rifle
-MRUItem3=/Game/weaponEffects/Muzzle/P_Muzzle_Large
-MRUItem4=/Game/weaponEffects/BloodImpact/P_blood_splash_02
-MRUItem5=/Game/Weapons/Effects/BloodImpact/P_blood_splash_02
-MRUItem6=/Game/Weapons/Effects/BloodImpact/T_BloodSplat_03_SubUV
-MRUItem7=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail
-MRUItem8=/Game/Weapons/Effects/BasicTracer/M_Beam
-MRUItem9=/Game/Weapons/Effects/BasicTracer/Beam
-MRUItem10=/Game/Weapons/SK_Rifle_Skeleton
-MRUItem11=/Game/Weapons/SK_Rifle
-MRUItem12=/Game/Weapons/Effects/Muzzle/P_Muzzle_Large
-MRUItem13=/Game/Blueprints/BP_TargetDummy
-MRUItem14=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
-MRUItem15=/Game/Blueprints/BP_Weapon
-MRUItem16=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
-MRUItem17=/Game/Blueprints/Animations/BP_CharacterAnimation
-MRUItem18=/Game/maps/VoidMap
+MRUItem0=/Game/Blueprints/BP_GrenadeLauncher
+MRUItem1=/Game/Blueprints/BP_Projectile
+MRUItem2=/Game/Weapons/Launcher
+MRUItem3=/Game/Weapons/Launcher_Skeleton
+MRUItem4=/Game/Blueprints/BP_Rifle
+MRUItem5=/Game/Blueprints/BP_PlayerPawn
+MRUItem6=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
+MRUItem7=/Game/Blueprints/Animations/BP_CharacterAnimation
+MRUItem8=/Game/UI/WBP_SimpleCrosshair
+MRUItem9=/Game/weaponEffects/Muzzle/P_Muzzle_Large
+MRUItem10=/Game/weaponEffects/BloodImpact/P_blood_splash_02
+MRUItem11=/Game/Weapons/Effects/BloodImpact/P_blood_splash_02
+MRUItem12=/Game/Weapons/Effects/BloodImpact/T_BloodSplat_03_SubUV
+MRUItem13=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail
+MRUItem14=/Game/Weapons/Effects/BasicTracer/M_Beam
+MRUItem15=/Game/Weapons/Effects/BasicTracer/Beam
+MRUItem16=/Game/Weapons/SK_Rifle_Skeleton
+MRUItem17=/Game/Weapons/SK_Rifle
+MRUItem18=/Game/Weapons/Effects/Muzzle/P_Muzzle_Large
+MRUItem19=/Game/Blueprints/BP_TargetDummy
 
 [AssetEditorToolkitTabLocation]
-/Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=1
-/Game/Blueprints/Animations/BP_CharacterAnimation.BP_CharacterAnimation=1
+/Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
+/Game/Blueprints/Animations/BP_CharacterAnimation.BP_CharacterAnimation=0
 /Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint.UE4ASP_HeroTPP_AnimBlueprint=1
 /Game/Blueprints/BP_Rifle.BP_Rifle=0
 /Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton.UE4_Mannequin_Skeleton=0
@@ -1878,6 +2006,9 @@ MRUItem18=/Game/maps/VoidMap
 /Game/Weapons/Effects/BloodImpact/T_BloodSplat_03_SubUV.T_BloodSplat_03_SubUV=0
 /Game/weaponEffects/BloodImpact/P_blood_splash_02.P_blood_splash_02=0
 /Game/weaponEffects/Muzzle/P_Muzzle_Large.P_Muzzle_Large=0
+/Game/Blueprints/BP_Projectile.BP_Projectile=0
+/Game/Weapons/Launcher_Skeleton.Launcher_Skeleton=0
+/Game/Weapons/Launcher.Launcher=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -1915,7 +2046,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [MessageLog]
-LastLogListing=CompilerResultsLog
+LastLogListing=PIE
 
 [/Script/UnrealEd.CascadeOptions]
 ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
