fixed projectile's component hierarchy

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,7 +105,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.17-03.30.09
+CoopGame.TimeStamp=2020.04.17-04.06.03
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -1774,6 +1774,43 @@ REINST_BP_GrenadeLauncher_C_33.Input=True
 REINST_BP_GrenadeLauncher_C_33.Actor=True
 BP_GrenadeLauncher_C.SkeletalMesh=True
 BP_TargetDummy_C.Collision=True
+REINST_BP_Projectile_C_45.Variable=True
+REINST_BP_Projectile_C_45.TransformCommon=True
+REINST_BP_Projectile_C_45.Sockets=True
+REINST_BP_Projectile_C_45.Shape=True
+REINST_BP_Projectile_C_45.Navigation=True
+REINST_BP_Projectile_C_45.Rendering=True
+REINST_BP_Projectile_C_45.Physics=True
+REINST_BP_Projectile_C_45.Collision=True
+REINST_BP_Projectile_C_45.Tags=True
+REINST_BP_Projectile_C_45.ComponentReplication=True
+REINST_BP_Projectile_C_45.Cooking=True
+REINST_BP_Projectile_C_45.Events=True
+REINST_BP_Projectile_C_53.Variable=True
+REINST_BP_Projectile_C_53.TransformCommon=True
+REINST_BP_Projectile_C_53.Sockets=True
+REINST_BP_Projectile_C_53.Shape=True
+REINST_BP_Projectile_C_53.Navigation=True
+REINST_BP_Projectile_C_53.Rendering=True
+REINST_BP_Projectile_C_53.Physics=True
+REINST_BP_Projectile_C_53.Collision=True
+REINST_BP_Projectile_C_53.Tags=True
+REINST_BP_Projectile_C_53.ComponentReplication=True
+REINST_BP_Projectile_C_53.Cooking=True
+REINST_BP_Projectile_C_53.Events=True
+REINST_BP_Projectile_C_61.Variable=True
+REINST_BP_Projectile_C_61.TransformCommon=True
+REINST_BP_Projectile_C_61.Sockets=True
+REINST_BP_Projectile_C_61.StaticMesh=True
+REINST_BP_Projectile_C_61.Materials=True
+REINST_BP_Projectile_C_61.Physics=True
+REINST_BP_Projectile_C_61.Collision=True
+REINST_BP_Projectile_C_61.Lighting=True
+REINST_BP_Projectile_C_61.Rendering=True
+REINST_BP_Projectile_C_61.Tags=True
+REINST_BP_Projectile_C_61.ComponentReplication=True
+REINST_BP_Projectile_C_61.Cooking=True
+REINST_BP_Projectile_C_61.Events=True
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1809,7 +1846,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/weaponEffects
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -1969,12 +2006,12 @@ RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 RecentlyPlaced=/Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_GrenadeLauncher
-MRUItem1=/Game/Blueprints/BP_Projectile
-MRUItem2=/Game/Weapons/Launcher
-MRUItem3=/Game/Weapons/Launcher_Skeleton
-MRUItem4=/Game/Blueprints/BP_Rifle
-MRUItem5=/Game/Blueprints/BP_PlayerPawn
+MRUItem0=/Game/Blueprints/BP_Projectile
+MRUItem1=/Game/Blueprints/BP_PlayerPawn
+MRUItem2=/Game/Blueprints/BP_GrenadeLauncher
+MRUItem3=/Game/Weapons/Launcher
+MRUItem4=/Game/Weapons/Launcher_Skeleton
+MRUItem5=/Game/Blueprints/BP_Rifle
 MRUItem6=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
 MRUItem7=/Game/Blueprints/Animations/BP_CharacterAnimation
 MRUItem8=/Game/UI/WBP_SimpleCrosshair
@@ -2191,5 +2228,8 @@ bCompileDirectorOnEvaluate=False
 TrajectoryPathCap=250
 FrameNumberDisplayFormat=Seconds
 CurveVisibility=SelectedCurves
+
+[DetailCategoriesAdvanced]
+BP_Projectile_C.Shape=True
 
 
