more components refinements

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,7 +105,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.17-04.06.03
+CoopGame.TimeStamp=2020.04.17-04.13.15
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -2007,25 +2007,25 @@ RecentlyPlaced=/Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn;
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Blueprints/BP_Projectile
-MRUItem1=/Game/Blueprints/BP_PlayerPawn
-MRUItem2=/Game/Blueprints/BP_GrenadeLauncher
-MRUItem3=/Game/Weapons/Launcher
-MRUItem4=/Game/Weapons/Launcher_Skeleton
-MRUItem5=/Game/Blueprints/BP_Rifle
-MRUItem6=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
-MRUItem7=/Game/Blueprints/Animations/BP_CharacterAnimation
-MRUItem8=/Game/UI/WBP_SimpleCrosshair
-MRUItem9=/Game/weaponEffects/Muzzle/P_Muzzle_Large
-MRUItem10=/Game/weaponEffects/BloodImpact/P_blood_splash_02
-MRUItem11=/Game/Weapons/Effects/BloodImpact/P_blood_splash_02
-MRUItem12=/Game/Weapons/Effects/BloodImpact/T_BloodSplat_03_SubUV
-MRUItem13=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail
-MRUItem14=/Game/Weapons/Effects/BasicTracer/M_Beam
-MRUItem15=/Game/Weapons/Effects/BasicTracer/Beam
-MRUItem16=/Game/Weapons/SK_Rifle_Skeleton
-MRUItem17=/Game/Weapons/SK_Rifle
-MRUItem18=/Game/Weapons/Effects/Muzzle/P_Muzzle_Large
-MRUItem19=/Game/Blueprints/BP_TargetDummy
+MRUItem1=/Game/Blueprints/BP_Rifle
+MRUItem2=/Game/Blueprints/BP_TargetDummy
+MRUItem3=/Game/Blueprints/BP_PlayerPawn
+MRUItem4=/Game/Blueprints/BP_GrenadeLauncher
+MRUItem5=/Game/Weapons/Launcher
+MRUItem6=/Game/Weapons/Launcher_Skeleton
+MRUItem7=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
+MRUItem8=/Game/Blueprints/Animations/BP_CharacterAnimation
+MRUItem9=/Game/UI/WBP_SimpleCrosshair
+MRUItem10=/Game/weaponEffects/Muzzle/P_Muzzle_Large
+MRUItem11=/Game/weaponEffects/BloodImpact/P_blood_splash_02
+MRUItem12=/Game/Weapons/Effects/BloodImpact/P_blood_splash_02
+MRUItem13=/Game/Weapons/Effects/BloodImpact/T_BloodSplat_03_SubUV
+MRUItem14=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail
+MRUItem15=/Game/Weapons/Effects/BasicTracer/M_Beam
+MRUItem16=/Game/Weapons/Effects/BasicTracer/Beam
+MRUItem17=/Game/Weapons/SK_Rifle_Skeleton
+MRUItem18=/Game/Weapons/SK_Rifle
+MRUItem19=/Game/Weapons/Effects/Muzzle/P_Muzzle_Large
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -2046,6 +2046,7 @@ MRUItem19=/Game/Blueprints/BP_TargetDummy
 /Game/Blueprints/BP_Projectile.BP_Projectile=0
 /Game/Weapons/Launcher_Skeleton.Launcher_Skeleton=0
 /Game/Weapons/Launcher.Launcher=0
+/Game/Blueprints/BP_TargetDummy.BP_TargetDummy=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
