allowed weapon and projectile damage to being edited in editor.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,7 +105,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.17-13.45.33
+CoopGame.TimeStamp=2020.04.17-14.04.14
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -1813,7 +1813,7 @@ REINST_BP_Projectile_C_61.Cooking=True
 REINST_BP_Projectile_C_61.Events=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
@@ -2006,11 +2006,11 @@ RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 RecentlyPlaced=/Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_PlayerPawn
-MRUItem1=/Game/Blueprints/BP_Projectile
-MRUItem2=/Game/Blueprints/BP_Rifle
-MRUItem3=/Game/Blueprints/BP_TargetDummy
-MRUItem4=/Game/Blueprints/BP_GrenadeLauncher
+MRUItem0=/Game/Blueprints/BP_Projectile
+MRUItem1=/Game/Blueprints/BP_Rifle
+MRUItem2=/Game/Blueprints/BP_GrenadeLauncher
+MRUItem3=/Game/Blueprints/BP_PlayerPawn
+MRUItem4=/Game/Blueprints/BP_TargetDummy
 MRUItem5=/Game/Weapons/Launcher
 MRUItem6=/Game/Weapons/Launcher_Skeleton
 MRUItem7=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
