--- a/CoopGame/Saved/Config/Windows/Input.ini
+++ b/CoopGame/Saved/Config/Windows/Input.ini
@@ -1,4 +1,7 @@
 [/Script/Engine.Console]
 HistoryBuffer=show Collision
+HistoryBuffer=COOP.DebugWeapons 2
+HistoryBuffer=COOP.DebugWeapons 1
+HistoryBuffer=COOP.DebugWeapons 0
 
 
