removed beginPlay, Tick and canEverTick from weapon. They were unused.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1813,7 +1813,7 @@ REINST_BP_Projectile_C_61.Cooking=True
 REINST_BP_Projectile_C_61.Events=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
@@ -2006,10 +2006,10 @@ RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 RecentlyPlaced=/Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_Projectile
-MRUItem1=/Game/Blueprints/BP_Rifle
-MRUItem2=/Game/Blueprints/BP_GrenadeLauncher
-MRUItem3=/Game/Blueprints/BP_PlayerPawn
+MRUItem0=/Game/Blueprints/BP_PlayerPawn
+MRUItem1=/Game/Blueprints/BP_Projectile
+MRUItem2=/Game/Blueprints/BP_Rifle
+MRUItem3=/Game/Blueprints/BP_GrenadeLauncher
 MRUItem4=/Game/Blueprints/BP_TargetDummy
 MRUItem5=/Game/Weapons/Launcher
 MRUItem6=/Game/Weapons/Launcher_Skeleton
