--- a/CoopGame/Saved/Config/Windows/Input.ini
+++ b/CoopGame/Saved/Config/Windows/Input.ini
@@ -1,6 +1,8 @@
 [/Script/Engine.Console]
 HistoryBuffer=show Collision
 HistoryBuffer=COOP.DebugWeapons 2
+HistoryBuffer=coop
+HistoryBuffer=COOP.DebugWeapons
 HistoryBuffer=COOP.DebugWeapons 1
 HistoryBuffer=COOP.DebugWeapons 0
 
